--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.5.6",
+        "sass": "^1.89.2",
         "tailwindcss": "^4.1.11",
         "vite": "^6.2.4"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.17",
         "@vitejs/plugin-vue": "^6.0.1",
+        "lucide": "^0.536.0",
+        "lucide-vue-next": "^0.536.0",
         "vue": "^3.5.18"
     }
 }
