--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,5 +47,5 @@ jobs:
             cd /home/srv59939/domains/lipinskijakub.pl/public_html
             git pull origin main
             composer install --no-dev --prefer-dist --no-interaction --optimize-autoloader
-            php artisan migrate --force
+            php artisan migrate
             php artisan optimize
